# rda-py

./: .gitignore  LICENSE.txt  README.md  mypy  pyproject.toml  requirements.txt
docs/source/: conf.py  index.rst  modules.rst  src.rst
src/: __init__.py  automation.py  base.py  keyboard.py  mouse.py  utils.py  window.py  windows.py  windowsearch.py
src/rda/: __init__.py  automation.py  base.py  keyboard.py  mouse.py  utils.py  window.py  windows.py  windowsearch.py
test/: __init__.py  test_automation.py  test_windows.py
tests/: __init__.py  conftest.py  test_automation.py  test_keyboard.py  test_mouse.py  test_utils.py  test_window.py  test_windows.py  timer.py  utils.py
